# bananza-video-sharing

./: .gitignore  README.md  package.json
bananza-backend/: Dockerfile  README.md  pyproject.toml
bananza-backend/resources/cv/: cv-upload-Claudiu88  cv-upload-lmaoddx
bananza-backend/src/bananza_backend/: exceptions.py  fastapi.py  models.py  pydantic_models.py
bananza-backend/src/bananza_backend/api/: auth.py  interactions.py  manager_applications.py  users.py  videos.py
bananza-backend/src/bananza_backend/db/: models.db  models.py  sql_db.py  sql_models.py
bananza-backend/src/bananza_backend/db/alembic/: alembic.ini  models.db
bananza-backend/src/bananza_backend/db/alembic/migrations/: env.py
bananza-backend/src/bananza_backend/db/alembic/migrations/versions/: 0eb8ed556777_create_users_channels_videos_tables_v2.py  3035416af83e_only_users_and_videos_tables.py  32a00d832914_add_reactions_and_comments.py  3a5addc8fb64_add_manager_applications_table.py  7017c444fbd1_add_more_fields_to_videos.py  773ab8d4ee87_add_reason_to_reported_video.py  bb6304951fcb_add_reported_videos_table.py  (+4 more)
bananza-backend/src/bananza_backend/services/authentication/: handler.py
bananza-backend/src/bananza_backend/services/interactions/: comment.py  react.py  report.py
bananza-backend/src/bananza_backend/services/manager_applications/: repository.py
bananza-backend/src/bananza_backend/services/users/: repository.py
bananza-backend/src/bananza_backend/services/videos/: repository.py
bananza-backend/tests/: test_bananza_backend.py
bananza-backend/tests/api/: users.py
(+50 files in other folders)
