[tool.poetry]
name = "bananza-backend"
version = "0.1.0"
description = ""
authors = ["serbanlex <alexandru.b.serban@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
fastapi-utils = "^0.2.1"
SQLAlchemy = "^1.4.35"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
importlib-resources = "^5.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
