[tool.poetry]
name = "bananza-backend"
version = "0.1.0"
description = ""
authors = ["serbanlex <alexandru.b.serban@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
fastapi-utils = "^0.2.1"
SQLAlchemy = "^1.4.35"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
importlib-resources = "^5.7.1"
bcrypt = "^3.2.0"
loguru = "^0.6.0"
requests = "^2.27.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
